<resources>
    <string name="app_name">Live News</string>
    <string name="intro">All type of news trusted sources for all\n type of people</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? <b>Register Now</b></string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="live">
 <font color="#0187CB"><b>LIVE</b></font> <font color="#FF000000"><b>NEWS</b></font></string>
    <string name="send">Send</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="reset_password">Reset password</string>
</resources>