<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/live"
            android:gravity="center"
            android:textSize="50sp"/>


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/login_animation" />

        <EditText
            android:id="@+id/emailEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text"
            android:drawableStart="@drawable/email"
            android:drawablePadding="10dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="18dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/passwordEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text"
            android:drawableStart="@drawable/password"
            android:drawablePadding="10dp"
            android:hint="Password"

            android:inputType="textPassword"
            android:padding="18dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Forgot password?" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn"
            android:backgroundTint="@null"
            android:padding="15dp"
            android:text="@string/log_in"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/don_t_have_an_account_register"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading"
            android:layout_width="150dp"
            android:layout_height="100dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:visibility="invisible"
            android:layout_gravity="center"
            app:lottie_rawRes="@raw/loading" />

    </LinearLayout>

</LinearLayout>
